# onednn-playground

./: .gitmodules  CMakeLists.txt  README.md  data.npz  moe.ipynb  moe_top-k.ipynb
src/: CMakeLists.txt  moe.cpp
